fixed the truncated text for the logo

--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,9 @@ footer a {
         align-items: center;
         justify-content: center;
     }
+    .typing-demo {
+        font-size: 1.5em; /* slightly smaller text so it fits within 10em */
+    }
     section.about {
         display: flex;
         margin: 80px auto 80px auto;
